# sudoku_en_c

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NEXT_STEPS.md  NOTICE  README.en.md  README.md  main.c  main_test.c  setup_project.sh
.cache/clangd/index/: main.c.9FF8389BC5B97DC6.idx  main_test.c.7508B0E2E1E163E9.idx  types.h.01BF04FB0B59C2D8.idx  validation.c.F19275BEE6A2DA66.idx  validation.h.47953BE4F75A8836.idx
docs/: AC3_FOUNDATION.md  ALGORITHMS.md  ALGORITHMS_V3.md  ARCHITECTURE.md  README.md  TECHNICAL.md
include/sudoku/: sudoku.h
include/sudoku/algorithms/: ac3.h  ac3hb.h  forced_cells.h  heuristics.h  network.h
include/sudoku/core/: board.h  display.h  generator.h  generator.h.backup  types.h  validation.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  board.c  config.c  display.c  events.c  generator.c  network.c  validation.c
src/core/algorithms/: ac3.c  ac3hb.c  backtracking.c  diagonal.c  fisher_yates.c  forced_cells.c  heuristics.c
src/core/elimination/: density_scoring.c  elimination.c  elimination_config.c  phase1.c  phase2.c  phase3.c
src/core/heuristics/: combined.c  degree.c  density.c  mrv.c  selector.c
src/core/internal/: algorithms_internal.h  board_internal.h  config_internal.h  density_scoring.h  elimination_config.h  elimination_internal.h  events_internal.h  generator_internal.h  heuristics_internal.h
src/io/: CMakeLists.txt
src/solver/: CMakeLists.txt
src/utils/: memory.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/algorithms/: CMakeLists.txt  test_ac3.c  test_backtracking.c  test_fisher_yates.c  test_network.c
tests/unit/core/: CMakeLists.txt  test_board.c  test_validacion.c
tests/unit/elimination/: CMakeLists.txt  test_phase1.c  test_phase2a.c  test_phase2c.c
tools/: CMakeLists.txt
tools/generator_cli/: CMakeLists.txt  main.c
tools/interactive/: CMakeLists.txt
tools/solver_cli/: CMakeLists.txt
